--- a/.github/workflows/cron_bypassCF_idc.yaml
+++ b/.github/workflows/cron_bypassCF_idc.yaml
@@ -20,7 +20,7 @@ jobs:
       # 在作业级别设置环境变量      
       USERNAMES: ${{ secrets.USERNAMES }}
       PASSWORDS: ${{ secrets.PASSWORDS }}
-      WEBSITE: "https://idcflare.com"
+      WEBSITE: "https://linux.do"
       RUN_TIME_LIMIT_MINUTES: ${{ secrets.RUN_TIME_LIMIT_MINUTES }}
       MAX_CONCURRENT_ACCOUNTS: ${{ secrets.MAX_CONCURRENT_ACCOUNTS }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
